# DeepTab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONVENTIONAL_COMMITS.md  LICENSE  README.md  justfile  pyproject.toml  readthedocs.yaml
.github/workflows/: build-check.yml  ci.yml  docs.yml  pr-tests.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml  semantic-release.yml  sync-develop.yml  tag-release.yml
deeptab/: __init__.py  _version.py
deeptab/arch_utils/: enode_utils.py  get_norm_fn.py  lstm_utils.py  rnn_utils.py  simple_utils.py  transformer_utils.py  trompt_utils.py
deeptab/arch_utils/layer_utils/: batch_ensemble_layer.py  embedding_layer.py  importance.py  normalization_layers.py  rotary_utils.py
deeptab/arch_utils/mamba_utils/: mamba_arch.py  mamba_original.py
deeptab/architectures/: __init__.py  autoint.py  enode.py  ft_transformer.py  mambatab.py  mambattention.py  mambular.py  mlp.py  ndtf.py  node.py  resnet.py  saint.py  tabm.py  tabr.py  tabtransformer.py  tabularnn.py
deeptab/architectures/experimental/: __init__.py  modern_nca.py  tangos.py  trompt.py
deeptab/base_models/: __init__.py  autoint.py  enode.py  ft_transformer.py  mambatab.py  mambattn.py  mambular.py  mlp.py  modern_nca.py  ndtf.py  node.py  resnet.py  saint.py  tabm.py  tabr.py  tabtransformer.py  tabularnn.py  tangos.py  trompt.py
deeptab/base_models/utils/: basemodel.py  lightning_wrapper.py  pretraining.py
deeptab/configs/: __init__.py  autoint_config.py  base_config.py  base_model_config.py  core.py  enode_config.py  fttransformer_config.py  mambatab_config.py  mambattention_config.py  mambular_config.py  mlp_config.py  modernnca_config.py  ndtf_config.py  node_config.py  preprocessing_config.py  resnet_config.py  saint_config.py  tabm_config.py  tabr_config.py  tabtransformer_config.py  tabularnn_config.py  tangos_config.py  trainer_config.py  trompt_config.py
deeptab/configs/experimental/: modernnca_config.py  tangos_config.py  trompt_config.py
deeptab/configs/models/: autoint_config.py  enode_config.py  fttransformer_config.py  mambatab_config.py  mambattention_config.py  mambular_config.py  mlp_config.py  ndtf_config.py  node_config.py  resnet_config.py  saint_config.py  tabm_config.py  tabr_config.py  tabtransformer_config.py  tabularnn_config.py
deeptab/core/: __init__.py  base_model.py  default_factories.py  embeddings.py  exceptions.py  hardware.py  inference.py  inspection.py  interfaces.py  observability.py  optional_deps.py  pooling.py  registry.py  reproducibility.py  serialization.py  sklearn_compat.py  utils.py
deeptab/data/: __init__.py  batch.py  datamodule.py  dataset.py  schema.py  split.py
deeptab/data_utils/: datamodule.py  dataset.py
deeptab/distributions/: __init__.py  base.py  beta.py  categorical.py  gamma.py  mixture.py  negative_binomial.py  normal.py  poisson.py  registry.py  student_t.py  tweedie.py
deeptab/hpo/: __init__.py  search_space.py
deeptab/metrics/: __init__.py  base.py  classification.py  distributional.py  registry.py  regression.py
deeptab/models/: __init__.py  _docstring.py  autoint.py  base.py  classifier_base.py  enode.py  fttransformer.py  lss_base.py  mambatab.py  mambattention.py  mambular.py  mlp.py  ndtf.py  node.py  regressor_base.py  resnet.py  saint.py  tabm.py  tabr.py  tabtransformer.py  tabularnn.py
deeptab/models/_mixins/: __init__.py  fit.py  hpo.py  observability.py  predict.py  serialization.py
deeptab/models/experimental/: __init__.py  modern_nca.py  tangos.py  trompt.py
deeptab/models/utils/: sklearn_base_classifier.py  sklearn_base_lss.py  sklearn_base_regressor.py  sklearn_parent.py
deeptab/nn/: __init__.py  initialization.py  normalization.py
deeptab/nn/blocks/: common.py  mamba.py  node.py  transformer.py  trompt.py
deeptab/training/: __init__.py  lightning_module.py  losses.py  optimizers.py  pretraining.py  schedulers.py
deeptab/utils/: config_mapper.py  distributions.py
docs/: conf.py  contributing.md  homepage.md  index.rst  installation.md  key_concepts.md  llms.txt  overview.md  release.md  requirements_docs.txt
docs/_static/: custom.css
docs/_templates/: sidebar_toc.html
docs/api/: index.md  index.rst
docs/api/base_models/: BaseModels.rst  index.rst
docs/api/configs/: Configurations.rst  index.rst
docs/api/data/: data_ref.rst  index.rst
docs/api/data_utils/: Datautils.rst  index.rst
docs/api/models/: mlp.rst  (+16 more)
docs/core_concepts/: classification.md  config_system.md  custom_models.md  distributional_regression.md  index.md  index.rst  inference.md  model_operations.md  model_tiers.md  observability.md  preprocessing.md  regression.md  reproducibility.md  sklearn_api.md  training_and_evaluation.md
docs/developer_guide/: ci_cd.md  contributing.md  documentation.md  model_promotion_policy.md  release.md  support_matrix.md  testing.md  versioning.md
docs/examples/: classification.md  distributional.md  experimental.md  regression.md
docs/getting_started/: faq.md  index.md  index.rst  installation.md  migration.md  overview.md  quickstart.md  why_deeptab.md
docs/model_zoo/: comparison_tables.md  efficiency.md  index.md  index.rst  recommended_configs.md
docs/tutorials/: advanced_training.md  classification.md  distributional.md  experimental.md  hpo.md  imbalance_classification.md  index.md  index.rst  model_efficiency.md  observability.md  regression.md  skewed_regression.md  uncertainty_quantification.md
examples/: example_classification.py  example_distributional.py  example_regression.py
tests/: test_base.py  test_base_mixins.py  test_class_imbalance.py  test_config_api.py  test_configs.py  test_data.py  test_dependency_inversion.py  test_distributions.py  test_exceptions.py  test_hardware.py  test_hpo.py  test_inference_model.py  test_inspection.py  test_lss_base.py  test_metrics.py  test_model_exports.py  test_models.py  test_nn_blocks.py  test_observability.py  test_profile.py  test_reproducibility.py  test_save_load.py  test_sklearn_contract.py  test_training_optimizers.py  test_training_pretraining.py  test_training_schedulers.py
(+39 files in other folders)
