[project]
name = "deeptab"
version = "2.0.0"
description = "Tabular deep learning made simple: a scikit-learn compatible model zoo built on PyTorch and Lightning."
authors = [
  { name = "Anton Thielmann" },
  { name = "Manish Kumar" },
  { name = "Christoph Weisser" },
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dynamic = ["dependencies"]

[project.optional-dependencies]
logs = ["structlog>=24.0,<27.0"]
mlflow = ["mlflow>=2.10,<4.0"]
tensorboard = ["tensorboard>=2.14,<3.0"]
tracking = ["mlflow>=2.10,<4.0", "tensorboard>=2.14,<3.0"]
all = ["structlog>=24.0,<27.0", "mlflow>=2.10,<4.0", "tensorboard>=2.14,<3.0"]

[project.urls]
homepage = "https://github.com/OpenTabular/deeptab"
documentation = "https://deeptab.readthedocs.io/"
repository = "https://github.com/OpenTabular/deeptab"
package = "https://pypi.org/project/deeptab/"

[tool.poetry]
packages = [{ include = "deeptab" }]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
numpy = "^2.0.0"
pandas = "^2.0.3"
lightning = "^2.3.3"
scikit-learn = "^1.3.2"
torch = ">=2.2.2,<2.10.0"
torchmetrics = "^1.5.2"
setuptools = ">=78.1.1,<80"
properscoring = "^0.1"
scikit-optimize = "^0.10.2"
einops = "^0.8.0"
accelerate = "^1.2.1"
scipy = "^1.15.0"
pretab = "^0.0.1"
delu = "*"
faiss-cpu = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^4.1"
ruff = "0.15.12"       # keep in sync with .pre-commit-config.yaml ruff rev
pre-commit = "^3.6"
docformatter = "^1.4"
commitizen = "^3.29.1"
twine = "^6.2.0"
pyright = "^1.1.409"
ipykernel = "^7.2.0"

[tool.poetry.group.docs.dependencies]
setuptools = "*"
sphinx = { version = "9.1.0", python = ">=3.12" }
sphinx-autodoc-typehints = { version = ">=3.0", python = ">=3.12" }
numpydoc = ">=1.8"
nbsphinx = { version = ">=0.9.4", python = ">=3.12" }
ipython = "*"
myst-parser = { version = ">=4.0", python = ">=3.12" }

sphinx-togglebutton = "0.3.2"
sphinxawesome-theme = { version = ">=6.0", python = ">=3.12" }
readthedocs-sphinx-ext = "2.2.5"
lxml-html-clean = ">=0.4.4"
pydata-sphinx-theme = "0.15.2"
sphinx-design = "*"
sphinxcontrib-mermaid = "*"
sphinxext-opengraph = "*"


# test configuration
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = [
  "dev",
  "docs",
  "examples",
  "efficiency",
  "lightning_logs",
  "model_checkpoints",
  ".venv",
]
markers = [
  "smoke: fast sanity-check tests that should pass in under 60 s (selected in the CI smoke job)",
]
filterwarnings = [
  # Lightning trainer noise (dataloader workers, log interval, checkpoint dir, tensorboard)
  "ignore::UserWarning:lightning",
  # PyTorch transformer / RNN config warnings
  "ignore::UserWarning:torch",
  # properscoring invalid escape sequences
  "ignore::DeprecationWarning:properscoring",
  # faiss SwigPy builtin type warnings (emitted during import)
  "ignore::DeprecationWarning:importlib",
  # delu.nn.Lambda custom-function deprecation
  "ignore::DeprecationWarning:delu",
]

# code quality tools
[tool.pyright]
include = ["deeptab", "tests"]
exclude = [
  "**/__pycache__",
  ".venv",
  "build",
  "dist",
  "docs",
  "notebooks",
  "examples",
]

pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnsupportedDunderAll = false

# Configure code linting
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["*.ipynb", "deeptab/arch_utils/mamba_utils.mamba_orginal.py"]

[tool.ruff.lint]
select = [
  "A",   # flake8-buildins
  "B",   # flake8-bugbear
  "C4",
  "E",   # pycodestyle - errors
  "F",   # pyflakes
  "I",   # isort
  "RUF", # ruff specific rules
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle - warnings
]

ignore = [
  "B006",
  "F401", # Ignore unused imports
  "F841", # Ignore unused local variables
  "E501", # Ignore line length
  "D100", # Missing module-level docstring
  "D101", # Missing class-level docstring
  "D102", # Missing method-level docstring
  "D103", # Missing function-level docstring
  "B007",
  "S307",
]


[tool.ruff.lint.per-file-ignores]
# allow asserts in test files (bandit)
"test_*" = ["S101"]
# long docstring line — suppress until refactored
"deeptab/base_models/tangos.py" = ["W505"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

# Commitizen configuration
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = false
prerelease_offset = 1
changelog_merge_prerelease = true
